--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,5 @@
 source "https://gems.ruby-china.com" # gems.ruby-china.com rubygems.org
 
-gem "jekyll-rtd-theme"
+gem "jekyll-theme-minimal"
 
 gem "github-pages", group: :jekyll_plugins
